@@ -2,6 +2,7 @@ Revision history for Perl extension Algorithm::Odometer::Tiny.
 
 0.04	not yet released
 	- ...
+	- docs: mention Cartesian product and link to other modules
 
 0.02	Sat, Oct  5 2019	commit 06ec85554be6ca9c23178ab51c8fc4bb4199eeb7
 	- first public release
